# frags

./: .env.example  .gitignore  .markdownlint.json  .spiral_logs.jsonl  AGENTS.md  README.md  The_Defrag_Engine.ipynb  V0_PROMPTS.md  VERIFICATION_REPORT.md  alembic.ini  package-lock.json  package.json  pyproject.toml  render.yaml  test_spiral_e2e.py  test_sse_local.py  tsconfig.json  verify_agent.py
.github/: copilot-instructions.md
alembic/: env.py
alembic/versions/: 93e65e8c7391_wallet_passes.py  a76aff43b5a8_billing_rbac_ai_usage.py  b86c9821ddfb_init.py  c3c1b58a9f23_invites_and_user_tier.py  d5cfd5be4e57_stripe_webhook_events.py  e1a2b3c4d5e6_password_reset_tokens.py  f9111df08e5a_keyset_indexes.py
app/: layout.tsx  page.tsx
app/profiles/: page.tsx
app/protected/: page.tsx
cloudflare/agent-worker/: .dev.vars.example  README.md  package-lock.json  package.json  wrangler.toml
docs/: AUDIT-2026-01.md  DEVELOPER_GUIDE.md  deployment.md  dev-admin.md  frontend_contract.md  stripe_live_setup.md
docs/copy/: BRAND_COPY.md  COPY_SPEC.md
fixtures/horizons/: sample_geocenter.txt
frontend/: next.config.ts  package-lock.json  package.json
frontend/public/: manifest.webmanifest  robots.txt
lib/: horizons.ts  http.ts  prisma.ts
lib/auth/: guards.ts  session.ts
lib/billing/: admin.ts  entitlement.ts
lib/compute/: runCompute.ts
lib/ephemeris/: cache.ts
lib/profiles/: validation.ts
lib/stripe/: server.ts
lib/utils/: canonical.ts
notebooks/: colab_full_scope.ipynb.py
prisma/: schema.prisma
scripts/: fix_dashboard.py  seed.js  smoke-test-dev-admin.sh  smoke-test-prod.sh
styles/: globals.css
synth_engine/: config.py
synth_engine/agency/: action_schema.py  guardrails.py  pass_levels.py
synth_engine/ai/: __init__.py
synth_engine/api/: abuse.py  admin.py  ai.py  auth.py  billing.py  deps.py  email.py  entitlements.py  main.py  oauth.py  ratelimit.py  turnstile.py  wallet.py
synth_engine/clinical/: ingest.py
synth_engine/compute/: astrology.py  astrology_timing.py  genekeys_iface.py  humandesign_iface.py  iching.py  numerology.py
synth_engine/core/: orchestrator.py  spiral_query.py  spiral_store.py
tests/: adminEntitlement.test.ts  compute.test.ts  ephemeris.test.ts  health.test.ts  test_billing.py  test_spiral.py  test_wallet.py
(+151 files in other folders)
